<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:key="ghostty_session_tabs_category"
        app:title="@string/termux_ghostty_session_tabs_category_title">

        <SwitchPreferenceCompat
            app:key="use-session-tabs"
            app:title="@string/termux_ghostty_use_session_tabs_title"
            app:summary="@string/termux_ghostty_use_session_tabs_summary"
            app:defaultValue="false" />

        <ListPreference
            app:key="session-tab-bar-position"
            app:title="@string/termux_ghostty_session_tab_bar_position_title"
            app:summary="@string/termux_ghostty_session_tab_bar_position_summary"
            app:entries="@array/session_tab_bar_position_entries"
            app:entryValues="@array/session_tab_bar_position_values"
            app:defaultValue="bottom"
            app:dependency="use-session-tabs" />

        <ListPreference
            app:key="session-tab-bar-align"
            app:title="@string/termux_ghostty_session_tab_bar_align_title"
            app:summary="@string/termux_ghostty_session_tab_bar_align_summary"
            app:entries="@array/session_tab_bar_align_entries"
            app:entryValues="@array/session_tab_bar_align_values"
            app:defaultValue="left"
            app:dependency="use-session-tabs" />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="ghostty_theme_keyboard_category"
        app:title="@string/termux_ghostty_theme_keyboard_category_title">

        <ListPreference
            app:key="material-you-theme"
            app:title="@string/termux_ghostty_material_you_theme_title"
            app:summary="@string/termux_ghostty_material_you_theme_summary"
            app:entries="@array/material_you_theme_entries"
            app:entryValues="@array/material_you_theme_values"
            app:defaultValue="disabled" />

        <SwitchPreferenceCompat
            app:key="remember-soft-keyboard-state"
            app:title="@string/termux_ghostty_remember_soft_keyboard_state_title"
            app:summary="@string/termux_ghostty_remember_soft_keyboard_state_summary"
            app:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="ghostty_interaction_category"
        app:title="@string/termux_ghostty_interaction_category_title">

        <SwitchPreferenceCompat
            app:key="terminal-onclick-url-open"
            app:title="@string/termux_ghostty_terminal_onclick_url_open_title"
            app:summary="@string/termux_ghostty_terminal_onclick_url_open_summary"
            app:defaultValue="false" />

        <SwitchPreferenceCompat
            app:key="terminal-onclick-url-open-when-mouse-tracking-active"
            app:title="@string/termux_ghostty_terminal_onclick_url_open_when_mouse_tracking_active_title"
            app:summary="@string/termux_ghostty_terminal_onclick_url_open_when_mouse_tracking_active_summary"
            app:defaultValue="false"
            app:dependency="terminal-onclick-url-open" />

    </PreferenceCategory>

</PreferenceScreen>
